<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dont_Waste_BRQ</string>
    <string name="dont_waste_hm_n_logada">Don\'t Waste</string>
    <string name="organize_hm_n_logada">organize</string>
    <string name="sua_despensa_inteligente_hm_n_logada">Sua despensa inteligente</string>
    <string name="primeiro_acesso_btn_hm_n_logada">Primeiro Acesso</string>
    <string name="login_btn_hm_n_logada">Login</string>
    <string name="email_btn_cadastro">Email</string>
    <string name="senha_btn_cadastro">Senha</string>
    <string name="proximo_btn_cadastro">Próximo</string>
    <string name="nome_edit_segunda_tela_cadastro">Nome</string>
    <string name="quantas_pessoas_segunda_tela_cadastro">Quantas pessoas que residem na casa ?</string>
    <string name="dataa_ultima_compra_segunda_tela_cadastro">Qual a data da sua última compra ?</string>
    <string name="frequencia_compras_segunda_tela_cadastro">Com que frequência faz compras ?</string>
    <string name="voltar_segunda_tela_cadastro">Voltar</string>
    <string name="salvar_segunda_tela_cadastro">Salvar</string>
    <string name="esqueci_minha_senha_login">Esqueci minha senha</string>
    <string name="logar_login">Logar</string>
    <string name="enviar_senha">Enviar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="insira_um_email_valido">Email vazio ou inválido</string>
    <string name="insira_uma_senha_valido">Senha vazia ou inválida</string>
    <string name="dados_invalidos">Dados inválidos</string>
    <string name="nome_invalido">Nome inválido</string>
    <string name="quantidade_nao_selecionada">Seleione uma opção</string>
    <string name="data_invalida">Selecione uma data</string>
    <string name="botao_ajuda_senha">A senha deve conter de 6 a 8 caracteres numéricos</string>
    <string name="error_user_exists">A senha deve conter de 6 a 8 caracteres numéricos</string>
    <string name="title_activity_home_teste">HomeTeste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="clique_para_cadastrar_o_que_h_na_sua">Clique para cadastrar o que há na sua:</string>
    <string name="despensa">Despensa</string>
    <string name="geladeira">Geladeira</string>
    <string name="voltarcategorias">Voltar</string>
    <string name="organizecat">organize</string>
    <string name="wastecat">Waste</string>
    <string name="don_tcat">Don\'t</string>
    <string name="itens_despensa">Itens Despensa</string>
    <string name="voltar_geladeira_btn">Voltar</string>
    <string name="don_t_geladeira">Don\'t</string>
    <string name="waste_geladeira">Waste</string>
    <string name="organize_geladeira">organize</string>
    <string name="geladeira_tela_geladeira">GELADEIRA</string>
    <string name="bebidas_geladeira">Bebidas</string>
    <string name="todo">TODO</string>
    <string name="waste">Waste</string>
    <string name="geladeira_dois">GELADEIRA</string>
    <string name="todo_test">TODO</string>
    <string name="frutas_leg_e_verduras_item">FRUTAS LEG. E VERDURAS</string>
    <string name="mam_o_ITEM">MAMÃO</string>
    <string name="quantidade_item">001</string>
    <string name="alimentos_cadastrados_item_frutas_btn">Alimentos cadastrados</string>
    <string name="novo_item_btn">+ Novo item</string>
    <string name="salvar_ali_cadastrados">Salvar</string>
    <string name="dt_cadastrado">DT CADASTRADO</string>
</resources>