<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="4dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:fontFamily="@font/open_sans_bold"
        tools:text="@string/mam_o_ITEM"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white"
        android:src="@drawable/ic_sinal_de_menos"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/contador_item_frutas"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordar_costumizado"
        android:gravity="center"
        android:layout_margin="4dp"
        tools:text="@string/quantidade_item"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton_adicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add" />

</LinearLayout>