<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeNaoLogadaActivity">

<!--    Imagem fundo -->
    
    <ImageView
        android:id="@+id/imagem_marca_dagua"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fundonovo"
        android:scaleType="centerCrop"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

<!--    Imagem lixeira -->

    <ImageView
        android:id="@+id/imagem_lixeira"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/logo_sem_fundo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

<!--    Text Don't Waste -->

    <TextView
        android:id="@+id/text_nome_app"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/dont_waste_hm_n_logada"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagem_lixeira"/>

<!--    Text Organize -->

    <TextView
        android:id="@+id/text_organize"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/organize_hm_n_logada"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nome_app"/>

<!--    Text Sua despensa inteligente -->

    <TextView
        android:id="@+id/text_slogan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/sua_despensa_inteligente_hm_n_logada"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@color/cor_texto"
        android:textSize="40sp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_organize"/>

<!--    Botão Primeiro Acesso-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_primeiro_acesso_hm_n_logada"
        android:layout_width="@dimen/dimensao_largura_buttons"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/primeiro_acesso_btn_hm_n_logada"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

<!--    Botão Login -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_hm_n_logada"
        android:layout_width="@dimen/dimensao_largura_buttons"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_btn_hm_n_logada"
        android:fontFamily="@font/open_sans_bold"
        android:backgroundTint="@color/cor_texto"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>