<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ItensFrutasActivity">

    <!--    Imagem lixeira  -->

    <ImageView
        android:id="@+id/imageView_logo_geladeira_item_frutas"
        android:layout_width="108dp"
        android:layout_height="130dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/txt_organize_geladeira_item_frutas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sem_fundo"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <!--    Texto " Don't "  -->
    <TextView
        android:id="@+id/txt_dont_geladeira_item_frutas"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="151dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/don_tcat"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_logo_geladeira_item_frutas"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Texto " Waste "  -->
    <TextView
        android:id="@+id/txt_waste_geladeira_item_frutas"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="144dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/waste"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dont_geladeira_item_frutas" />

    <!--    Texto " Organize "  -->
    <TextView
        android:id="@+id/txt_organize_geladeira_item_frutas"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/organizecat"
        android:textColor="@color/color_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_waste_geladeira_item_frutas" />

    <!--    Texto " Clique para cadastrar "  -->
    <TextView
        android:id="@+id/txt_cadastrar_geladeira_item_frutas"
        android:layout_width="405dp"
        android:layout_height="36dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/bordar_costumizado"
        android:gravity="center"
        android:text="@string/clique_para_cadastrar_o_que_h_na_sua"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    CardView Geladeira com Title-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_geladeira_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/cinza_escuro"
        app:cardCornerRadius="17dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_cadastrar_geladeira_item_frutas">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardV_geladeira_item_frutas"
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_geladeira_aberta_item_frutas"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:scaleType="centerCrop"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:src="@drawable/geladeira_aberta"
                    tools:layout_editor_absoluteY="-6dp" />

                <TextView
                    android:id="@+id/text_item_frutas_geladeira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/geladeira_dois"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--    CardView Geladeira com Title-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_item_frutas"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/color_button"
        app:cardCornerRadius="17dp"
        app:layout_constraintTop_toBottomOf="@id/cardView_geladeira_principal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardV_item_frutas"
            android:layout_width="match_parent"
            android:layout_height="42dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_item_frutas"
                    android:layout_width="57dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:scaleType="centerCrop"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:src="@drawable/frutas"
                    tools:layout_editor_absoluteY="-6dp"
                    android:contentDescription="@string/todo_test" />

                <TextView
                    android:id="@+id/text_item_frutas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/frutas_leg_e_verduras_item"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--    Texto " Clique para cadastrar "  -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_itens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_item_frutas"
        tools:itemCount="4"
        tools:listitem="@layout/item_geladeira" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_novo_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity=""
        android:text="@string/novo_item_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_itens"
        tools:layout_editor_absoluteY="401dp" />

    <LinearLayout
        android:id="@+id/layout_novo_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/button_novo_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        >

        <EditText
            android:id="@+id/edittext_novo_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="116dp"
            android:background="@color/white"
            android:src="@drawable/ic_sinal_de_menos"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <!--    Button " Voltar " -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar_item_frutas"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:layout_margin="16dp"
        android:background="@color/cor_texto"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/voltar_geladeira_btn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!--    Button " Alimentos Cadastrados " -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_alimentos_cadastrados_item_frutas"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:layout_margin="16dp"
        android:background="@color/cor_texto"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/alimentos_cadastrados_item_frutas_btn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <include
        android:id="@+id/appBar_item_frutas_geladeira"
        layout="@layout/appbar" />

</androidx.constraintlayout.widget.ConstraintLayout>