<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TelaGeladeiraActivity">

    <!--    Imagem lixeira  -->

    <ImageView
        android:id="@+id/imageView_logo_geladeira"
        android:layout_width="108dp"
        android:layout_height="130dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/txt_organize_geladeira"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sem_fundo"
        tools:ignore="MissingConstraints" />

    <!--    Texto " Don't "  -->
    <TextView
        android:id="@+id/txt_dont_geladeira"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="151dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/don_t_geladeira"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_logo_geladeira"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Texto " Waste "  -->
    <TextView
        android:id="@+id/txt_waste_geladeira"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="144dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/waste_geladeira"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dont_geladeira" />

    <!--    Texto " Organize "  -->
    <TextView
        android:id="@+id/txt_organize_geladeira"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/organize_geladeira"
        android:textColor="@color/color_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_waste_geladeira" />

    <!--    Texto " Clique para cadastrar "  -->

    <TextView
        android:id="@+id/txt_cadastrar_geladeira"
        android:layout_width="405dp"
        android:layout_height="36dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/bordar_costumizado"
        android:gravity="center"
        android:text="@string/clique_para_cadastrar_o_que_h_na_sua"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="237dp"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cinza_escuro"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView_categorias"
            tools:layout_editor_absoluteX="17dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/????"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_bebidas"
                    app:layout_constraintRight_toLeftOf="@+id/text_geladeira"
                    app:srcCompat="????" />

                <TextView
                    android:id="@+id/text_geladeira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="24dp"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/geladeira"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar_geladeira"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:text="@string/voltar_geladeira_btn"
        android:textColor="@color/black"
        android:background="@color/cor_texto"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>